<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>ros_gz_sim</build_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  
  <build_depend>arm_description</build_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>rclcpp</depend>
  <depend>arm_control</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>tf2_geometry_msgs</depend>
    
  <export>
  <build_type>ament_cmake</build_type>
  <gazebo_ros>
    <gazebo_model_path>${prefix}/meshes</gazebo_model_path>
  </gazebo_ros>
  </export>
</package>

